--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td>2023</td>
-                    <td>Website Designer</td>
+                    <td>Learning Website Design</td>
                 </tr>
             </tbody>
         </table>
